--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -21,7 +21,7 @@ port = 54323
 [auth]
 enabled = true
 site_url = "http://localhost:5173"
-additional_redirect_urls = ["https://your-app.vercel.app"]
+additional_redirect_urls = ["https://belka-coffee.vercel.app"]
 jwt_expiry = 3600
 enable_signup = true
 
